--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.package-manager-ui": "2.0.3",
     "com.unity.textmeshpro": "1.3.0",
+    "com.unity.vectorgraphics": "1.0.0-preview.23",
     "com.unity.xr.openvr.standalone": "1.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
